<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ScanActivity"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimaryVariant"
        android:divider="@drawable/gap"
        android:gravity="top"
        android:orientation="vertical"
        android:showDividers="middle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_header_name"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/device_info_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:text="@string/interface_side_heading"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/interface_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_interface_text"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:text="@string/device_address"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/device_addr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_ip_text"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- todo -->
            <!--        refresh button-->
            <ImageButton
                android:id="@+id/rescanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/refresh_background"
                android:contentDescription="@string/rescan_button"
                android:src="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <!--        list of ip address-->
            <ListView
                android:id="@+id/hostListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="20dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/device_info_cont" />

            <TextView
                android:id="@+id/scan_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect to a WIFI Network"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/device_info_cont" />
            <!--        show messages on screen-->
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemTextColor="@color/grey"
        app:itemTextAppearance="@style/TextAppearance.AppCompat.Menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>